@@ -5,6 +5,8 @@ inputs:
 - name: plan-output-archive
 - name: consul-certificates
   optional: true
+- name: consul-config
+  optional: true
 outputs:
 - name: state-output-dir
 params:
