@@ -22,6 +22,8 @@ inputs:
   optional: true
 - name: consul-certificates
   optional: true
+- name: consul-config
+  optional: true
 outputs:
 - name: terraform-output
 caches:
